// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders correctly 1`] = `
<div
  class="cloud-loading"
>
  <div
    class="cloud-loading-container"
  >
    <div
      class="cloud-loading-animation cloud-loading-animation-default"
      style="width:12px;height:16px"
    >
      <span
        style="width:2px"
      />
      <span
        style="width:2px"
      />
      <span
        style="width:2px"
      />
    </div>
  </div>
</div>
`;

exports[`Loading renders different size 1`] = `
<div
  class="cloud-loading"
>
  <div
    class="cloud-loading-container"
  >
    <div
      class="cloud-loading-animation cloud-loading-animation-small"
      style="width:12px;height:10px"
    >
      <span
        style="width:2px"
      />
      <span
        style="width:2px"
      />
      <span
        style="width:2px"
      />
    </div>
  </div>
</div>
`;

exports[`Loading renders different size 2`] = `
<div
  class="cloud-loading"
>
  <div
    class="cloud-loading-container"
  >
    <div
      class="cloud-loading-animation cloud-loading-animation-default"
      style="width:12px;height:16px"
    >
      <span
        style="width:2px"
      />
      <span
        style="width:2px"
      />
      <span
        style="width:2px"
      />
    </div>
  </div>
</div>
`;

exports[`Loading renders different size 3`] = `
<div
  class="cloud-loading"
>
  <div
    class="cloud-loading-container"
  >
    <div
      class="cloud-loading-animation cloud-loading-animation-large"
      style="width:18px;height:22px"
    >
      <span
        style="width:3px"
      />
      <span
        style="width:3px"
      />
      <span
        style="width:3px"
      />
    </div>
  </div>
</div>
`;
